@@ -1,7 +1,11 @@
-this is CRUD Demo for Product task 
+This is CRUD Demo for Product task 
 
 to run the application 
-
-
+- git clone https://github.com/ibrahimcs80/ProductDemo.git
+- mvn clean install
+below links you can access database and swagger
 1- data base url : http://localhost:8080/h2/
 2- Swagger url : http://localhost:8080/swagger-ui.html#
+
+To Start Application :
+nohup java -Dserver.port=8080 -Xmx1024M -XX:MaxPermSize=512M -jar ./target/ProductApis-0.0.1-SNAPSHOT.jar &
